app/top-nav/top-nav.component.css
#menu-container {
    position: fixed;
    top: 0;
    right: 0;
    z-index: 1999;
    height: 100%;
    overflow-x: hidden;
    overflow-y: auto;
    background-color: transparent;
}

#modal {
    display: none;
    background-color: rgba(0, 0, 0, 0.5);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 1000%;
    z-index: 1998;
}

#modal.active {
    display: block;
}

#burger {
    position: absolute;
    top: 1.5em;
    right: 1.5em;
    font-size: 1.5em;
    z-index: 2000;
    color: #3535C8;
}

#menu {
    min-height: 100%;
    min-width: 16em;
    background-color: white;
    text-align: center;
    transform: translateX(100%);
    transition: transform 0.5s;
}

#menu.open {
    transform: translateX(0%);
}

img {
    width: 10em;
    height: 10em;
    margin: 2.5em auto 0em auto;
}

#links {
    display: flex;
    flex-direction: column;
    line-height: 2em;
}

#links>a {
    color: black;
    text-decoration: none;
}

